# mlgraphs-bandits-network

./: CMakeLists.txt  VisualizeRegret.ipynb  main.cpp  view_network.sh
bandit/: ArmBernoulli.h  Bandit.h  BanditNetwork.h  IArm.h
beamer/: beamercolorthememetropolis.sty  slides.bib  slides.tex
experiment-1/: UCBCircular.txt  UCBFC.txt  UCBFD.txt  UCBStar.txt
experiment-2/: UCBCircular.txt  UCBFC.txt  UCBFD.txt  UCBStar.txt
experiment-3/: FYL100.txt  FYL25.txt  UCB100.txt  UCB25.txt
monte-carlo/: MonteCarlo.cpp  MonteCarlo.h
network/: Edge.h  Network.h  NetworkFactory.h
policy/: FollowBestInformedPolicy.cpp  FollowBestInformedPolicy.h  FollowYourLeaderNetworkPolicy.cpp  FollowYourLeaderNetworkPolicy.h  FollowYourLeaderPolicy.cpp  FollowYourLeaderPolicy.h  IPolicy.h  PolicyResult.h  UCBNetworkPolicy.cpp  UCBNetworkPolicy.h
report/: biblio.bib  neurips_2018.tex
util/: GraphViz.h  Statistics.cpp  Statistics.h  ThreadPool.h  ThreadSafeQueue.h
